Add comments for dockerfile

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,3 +1,5 @@
+# run `docker build -t backend .`
+# set the base image
 FROM golang:1.15-alpine3.14
 RUN apk add bash ca-certificates git gcc g++ libc-dev
 RUN mkdir /app
